--- a/index.html
+++ b/index.html
@@ -1,70 +1,97 @@
 <script type="text/javascript">
 
-var urls = new Array();
-  urls[0]="https://exe.app/ar818";
-  urls[1]="https://exe.app/1uDbQIy";
-  urls[2]="https://exe.io/4NOJsL";
-  urls[3]="https://exe.app/5PFLk";
-  urls[4]="https://exe.app/4Afb9QRE";
-  urls[5]="https://exe.io/qazmlp";
-  urls[6]="https://exe.io/9qOvWYl";
-  urls[7]="https://exe.io/aaa817";
-  urls[8]="https://exe.io/aaa816";
-  urls[9]="https://exe.io/IFBcJ0";
-  urls[10]="https://exe.io/09aaEAp3";
-  urls[11]="https://exe.app/BHj73Rp";
-  urls[12]="https://exe.app/8GU8QF";
-  urls[13]="https://exe.app/ty7Jc5jy";
-  urls[14]="https://exe.app/qByN";
-  urls[15]="https://exe.app/VVQdTyq";
-  urls[16]="https://exe.app/b7nCH4a";
-  urls[17]="https://exe.app/WDloF";
-  urls[18]="https://exe.app/4RfIxW";
-  urls[19]="https://exe.app/GXlD8";
-  urls[20]="https://exe.app/M64TTC8";
-  urls[21]="https://exe.app/9vV0BSr";
-  urls[22]="https://exe.app/M25rhvjw";
-  urls[23]="https://exe.app/icPL";
-  urls[24]="https://exe.app/7qOc";
-  urls[25]="https://exe.app/g7uVqk";
-  urls[26]="https://exe.app/x3Gms";
-  urls[27]="https://exe.app/owqH6eH";
-  urls[28]="https://exe.io/3JIBAwJC";
-  urls[29]="https://exe.io/BWfx0XMR";
-  urls[30]="https://exe.io/mPPVQt";
-  urls[31]="https://exe.io/TcWCylii";
-  urls[32]="https://exe.io/Wkmpa";
-  urls[33]="https://exe.io/iWteQm";
-  urls[34]="https://exe.io/WY00Dsv";
-  urls[35]="https://exe.io/Yb4hoekS";
-  urls[36]="https://exe.io/VHONEVB";
-  urls[37]="https://exe.io/uEhQy6";
-  urls[38]="https://exe.io/BFQVSx";
-  urls[39]="https://exe.io/SmcHR";
-  urls[40]="https://exe.io/2i2JF74U";
-  urls[41]="https://exe.io/QGPDHB4L";
-  urls[42]="https://exe.io/ogcgiVQb";
-  urls[43]="https://exe.io/XjeAtLUv";
-  urls[44]="https://exe.io/Ol1TfRp";
-  urls[45]="https://exe.io/ueQeyTe";
-  urls[46]="https://exe.io/3UGeNB";
-  urls[47]="https://exe.io/6pKkeM";
-  urls[48]="https://exe.io/C9VBct";
-  urls[49]="https://exe.io/fFD428y";
-  urls[50]="https://exe.io/pPEWt";
-  urls[51]="https://exe.io/fuFTg";
-  urls[52]="https://exe.io/10gpP";
-  urls[53]="https://exe.io/SyBIZaNx";
-  urls[54]="https://exe.io/zrjuv4Af";
-  urls[55]="https://exe.io/3A7ctI";
-  urls[56]="https://exe.io/UJCRjSr7";
-  urls[57]="https://exe.io/oBwkyV";
-  urls[58]="https://exe.io/KmDA";
-  urls[59]="https://exe.io/Y7GPKsG";
-  urls[60]="https://exe.app/ZoK2XJRb";
-
-var random = Math.floor(Math.random()*urls.length);
-
-window.location = urls[random];
-
+    var urls = new Array();
+      urls[0]="https://exe.app/1uDbQIy";
+      urls[1]="https://exe.app/4Afb9QRE";
+      urls[2]="https://exe.app/4RfIxW";
+      urls[3]="https://exe.app/5PFLk";
+      urls[4]="https://exe.app/7qOc";
+      urls[5]="https://exe.app/8GU8QF";
+      urls[6]="https://exe.app/9vV0BSr";
+      urls[7]="https://exe.app/ar818";
+      urls[8]="https://exe.app/b7nCH4a";
+      urls[9]="https://exe.app/BHj73Rp";
+      urls[10]="https://exe.app/g7uVqk";
+      urls[11]="https://exe.app/GXlD8";
+      urls[12]="https://exe.app/icPL";
+      urls[13]="https://exe.app/M25rhvjw";
+      urls[14]="https://exe.app/M64TTC8";
+      urls[15]="https://exe.app/owqH6eH";
+      urls[16]="https://exe.app/qByN";
+      urls[17]="https://exe.app/ty7Jc5jy";
+      urls[18]="https://exe.app/VVQdTyq";
+      urls[19]="https://exe.app/WDloF";
+      urls[20]="https://exe.app/x3Gms";
+      urls[21]="https://exe.app/ZoK2XJRb";
+      urls[22]="https://exe.io/09aaEAp3";
+      urls[23]="https://exe.io/10gpP";
+      urls[24]="https://exe.io/1U98M";
+      urls[25]="https://exe.io/2i2JF74U";
+      urls[26]="https://exe.io/2SdV9";
+      urls[27]="https://exe.io/3A7ctI";
+      urls[28]="https://exe.io/3JIBAwJC";
+      urls[29]="https://exe.io/3UGeNB";
+      urls[30]="https://exe.io/3YTVPbd";
+      urls[31]="https://exe.io/4NOJsL";
+      urls[32]="https://exe.io/6bZNxyP";
+      urls[33]="https://exe.io/6L7xG9Ig";
+      urls[34]="https://exe.io/6pKkeM";
+      urls[35]="https://exe.io/6Tdom";
+      urls[36]="https://exe.io/7El6zMZu";
+      urls[37]="https://exe.io/82DI";
+      urls[38]="https://exe.io/8xq1Us3";
+      urls[39]="https://exe.io/9qOvWYl";
+      urls[40]="https://exe.io/9yR5HM";
+      urls[41]="https://exe.io/aaa816";
+      urls[42]="https://exe.io/aaa817";
+      urls[43]="https://exe.io/awzgaHl";
+      urls[44]="https://exe.io/BFQVSx";
+      urls[45]="https://exe.io/BWfx0XMR";
+      urls[46]="https://exe.io/C9VBct";
+      urls[47]="https://exe.io/DhIO7eGL";
+      urls[48]="https://exe.io/dmvVbH";
+      urls[49]="https://exe.io/e5ZLCOP";
+      urls[50]="https://exe.io/EcAapE";
+      urls[51]="https://exe.io/fFD428y";
+      urls[52]="https://exe.io/fuFTg";
+      urls[53]="https://exe.io/GIlpDv";
+      urls[54]="https://exe.io/gU90J4z";
+      urls[55]="https://exe.io/Hcnvs";
+      urls[56]="https://exe.io/IFBcJ0";
+      urls[57]="https://exe.io/iWteQm";
+      urls[58]="https://exe.io/KmDA";
+      urls[59]="https://exe.io/LuZcPf0O";
+      urls[60]="https://exe.io/mPPVQt";
+      urls[61]="https://exe.io/mSc8";
+      urls[62]="https://exe.io/oBwkyV";
+      urls[63]="https://exe.io/ogcgiVQb";
+      urls[64]="https://exe.io/Ol1TfRp";
+      urls[65]="https://exe.io/OuSXhr1";
+      urls[66]="https://exe.io/pPEWt";
+      urls[67]="https://exe.io/PwgClCue";
+      urls[68]="https://exe.io/qazmlp";
+      urls[69]="https://exe.io/QGPDHB4L";
+      urls[70]="https://exe.io/rkXFSjl";
+      urls[71]="https://exe.io/s1YHnj8j";
+      urls[72]="https://exe.io/SmcHR";
+      urls[73]="https://exe.io/SyBIZaNx";
+      urls[74]="https://exe.io/TcWCylii";
+      urls[75]="https://exe.io/uDECN";
+      urls[76]="https://exe.io/uEhQy6";
+      urls[77]="https://exe.io/ueQeyTe";
+      urls[78]="https://exe.io/UJCRjSr7";
+      urls[79]="https://exe.io/VHONEVB";
+      urls[80]="https://exe.io/Wkmpa";
+      urls[81]="https://exe.io/wW8Ha";
+      urls[82]="https://exe.io/WY00Dsv";
+      urls[83]="https://exe.io/XjeAtLUv";
+      urls[84]="https://exe.io/Y7GPKsG";
+      urls[85]="https://exe.io/Yb4hoekS";
+      urls[86]="https://exe.io/YL9934";
+      urls[87]="https://exe.io/Yrb4l";
+      urls[88]="https://exe.io/z7vR1z0N";
+      urls[89]="https://exe.io/zAQI3TE";
+      urls[90]="https://exe.io/zrjuv4Af";
+    var random = Math.floor(Math.random()*urls.length);
+    window.location = (urls[random]);
 </script>
